<resources>
    <string name="app_name">ArtsNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="pref_text_size_title">Text Size</string>
    <string name="pref_text_size_default">Medium</string>
    <string name="pref_text_size_summary">Medium</string>

    <string-array name="pref_text_size_entries">

        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>

    </string-array>


    <string-array name="pref_text_size_values">

        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>

    </string-array>


    <string name="pref_text_style_title">Font Style</string>
    <string name="pref_text_style_default">Normal</string>
    <string name="pref_text_style_summary">Normal</string>

    <string-array name="pref_text_style_entries">

        <item>Normal</item>
        <item>Bold</item>
        <item>Italic</item>
        <item>Bold-Italic</item>

    </string-array>


    <string-array name="pref_text_style_values">

        <item>Normal</item>
        <item>Bold</item>
        <item>Italic</item>
        <item>Bold-Italic</item>

    </string-array>



</resources>