<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

<!--    <CheckBoxPreference
        android:key="pref_sync"
        android:title="@string/sync_pref"
        android:summary="@string/sync_pref_summary"
        android:defaultValue="true"
        />-->

    <PreferenceCategory
        android:title="Notes"
        >
        <ListPreference

            android:key="pref_note_text_size"
            android:title="@string/pref_text_size_title"
            android:entries="@array/pref_text_size_entries"
            android:entryValues="@array/pref_text_size_values"
            android:defaultValue="@string/pref_text_size_default"
            android:summary="@string/pref_text_size_summary"
            />

        <ListPreference

            android:key="pref_note_text_style"
            android:title="@string/pref_text_style_title"
            android:entries="@array/pref_text_style_entries"
            android:entryValues="@array/pref_text_style_values"
            android:defaultValue="@string/pref_text_style_default"
            android:summary="@string/pref_text_style_summary"

            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Check List"
        >
        <ListPreference
            android:key="pref_checklist_text_size"
            android:title="@string/pref_text_size_title"
            android:entries="@array/pref_text_size_entries"
            android:entryValues="@array/pref_text_size_values"
            android:defaultValue="@string/pref_text_size_default"
            android:summary="@string/pref_text_size_summary"
            />

        <ListPreference

            android:key="pref_checklist_text_style"
            android:title="@string/pref_text_style_title"
            android:entries="@array/pref_text_style_entries"
            android:entryValues="@array/pref_text_style_values"
            android:defaultValue="@string/pref_text_style_default"
            android:summary="@string/pref_text_style_summary"

            />


    </PreferenceCategory>


</PreferenceScreen>